2010-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_PATH_EMACS): Support Emacs 24.
	(AC_ADD_LOAD_PATH): Pipe stderr to /dev/null when running
	w3mhack-print-status.

2010-03-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-ignored-image-url-regexp): Fix custom type.

2010-03-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url-1): Don't recenter if page is not changed.
	(w3m-goto-url): Don't move point to the top unless redisplaying page.

2010-03-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Suppress compiler warnings that Emacs<22.2 and XEmacs issue
	against image-mode functions.

2010-03-02  Naohiro Aota  <naota@elisp.net>

	* w3m.el (top): Require image-mode if available.
	(w3m-image-page-displayed-p): New function.
	(w3m-create-image-page): Setup image-mode's variable if possible.
	(w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url)
	(w3m-shift-left, w3m-shift-right, w3m-beginning-of-line)
	(w3m-end-of-line): Call image-mode functions if possible and needed.

2010-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Turn truncate-lines off for text/plain pages.

2010-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-images): Add menu to images.
	(w3m-download-this-image, w3m-print-this-image-url): New functions.
	(w3m-link-menu): Add them; enable menu only when url or image is there.

2010-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-window-hscroll): Revert 2010-01-13 change.

2010-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-cache-available-p): Now, pages with neither Last-Modified
	header and ETag header are treated as dynamically-generated pages.
	(w3m-cache-header-delete-variable-part): Contination lines are also
	removed.

2010-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-dirlist-cgi, w3m-set-display-ins-del):
	Honor w3m-command-environment.
	Suggested by Toru TSUNEYOSHI <t_tuneyosi@hotmail.com>.
